@@ -4,8 +4,9 @@ Functionality for working with Xarray for seismology data.
 
 from obsplus.waveforms.xarray.accessor import ops_method, OPS_METHODS
 
-from obsplus.waveforms.xarray.utils import keep_attrs, _add_level, get_nslc_df
+from obsplus.waveforms.xarray.utils import keep_attrs, _add_level
 from obsplus.waveforms.xarray.io import netcdf2array
+from obsplus.utils import get_seed_id_series
 
 
 # load in all aggregation plugins
