@@ -16,6 +16,8 @@ obsplus master:
   - obsplus.stations
     * Fixed issue where networks and stations could be left un-pruned when
       querying on channel (see #115).
+  - obsplus.utils
+    * Deprecate get_nslc_series in favor of get_seed_id_series (#120).
 
 obsplus 0.0.2:
   - obsplus.bank
